@@ -1,42 +1,70 @@
 <project
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
-		<relativePath />
-		<!-- lookup parent from repository -->
-	</parent>
 	<groupId>io.mosip.bio.utils</groupId>
 	<artifactId>bioutils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-java21-SNAPSHOT</version>
 	<name>bioutils</name>
-	<url>http://maven.apache.org</url>
-	
+	<url>https://github.com/mosip/bio-utils</url>
+	<description>This utility is used to Test the Biomnetric Util Repo
+		functionalties.</description>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>21</java.version>
+
+		<!-- maven -->
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven.compiler.version>3.11.0</maven.compiler.version>
+		<maven.jar.plugin.version>3.4.0</maven.jar.plugin.version>
+		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
+		<maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
+
+		<!-- spring -->
 		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
+
+		<!-- opencv -->
 		<openpnp-opencv.version>4.5.3-4</openpnp-opencv.version>
-		<lombok.version>1.18.24</lombok.version>
-		<kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
-		<fasterxml.jackson.version>2.15.0</fasterxml.jackson.version>
-		<hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
-		<biometrics-util.version>1.2.1-SNAPSHOT</biometrics-util.version>
+
+		<!-- utilities -->
+		<okhttp.version>2.7.5</okhttp.version>
+		<google.protobuf.version>3.13.0</google.protobuf.version>
+		<jai.imageio.jpeg2000.version>1.3.0</jai.imageio.jpeg2000.version>
+		<github.mhshams.jnbis.version>2.0.2</github.mhshams.jnbis.version>
+		<imgscalr.lib.version>4.2</imgscalr.lib.version>
+
 		<!-- fasterxml jackson-->
-		<com.fasterxml.jackson.version>2.15.0</com.fasterxml.jackson.version>
-        <okhttp.version>2.7.5</okhttp.version>
-        <junit.version>3.8.1</junit.version>
+		<com.fasterxml.jackson.databind.version>2.15.0</com.fasterxml.jackson.databind.version>
+		<com.fasterxml.jackson.core.version>2.15.0</com.fasterxml.jackson.core.version>
+
+		<!-- Mosip -->
+		<kernel.bom.version>1.2.1-java21-SNAPSHOT</kernel.bom.version>
+		<kernel.core.version>1.2.1-java21-SNAPSHOT</kernel.core.version>
+		<mosip.biometrics.util.version>1.2.1-java21-SNAPSHOT</mosip.biometrics.util.version>
+
 	</properties>
-	
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.mosip.kernel</groupId>
+				<artifactId>kernel-bom</artifactId>
+				<version>${kernel.bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>io.mosip.biometric.util</groupId>
 			<artifactId>biometrics-util</artifactId>
-			<version>${biometrics-util.version}</version>
+			<version>${mosip.biometrics.util.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -55,69 +83,89 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-csv</artifactId>
-			<version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.10</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+		<!--
+		https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
-			<version>3.13.0</version>
+			<version>${google.protobuf.version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-jpeg2000 -->
+		<!--
+		https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-jpeg2000 -->
 		<dependency>
 			<groupId>com.github.jai-imageio</groupId>
 			<artifactId>jai-imageio-jpeg2000</artifactId>
-			<version>1.3.0</version>
+			<version>${jai.imageio.jpeg2000.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.mhshams/jnbis -->
 		<dependency>
 			<groupId>com.github.mhshams</groupId>
 			<artifactId>jnbis</artifactId>
-			<version>2.0.2</version>
+			<version>${github.mhshams.jnbis.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.imgscalr</groupId>
 			<artifactId>imgscalr-lib</artifactId>
-			<version>4.2</version>
+			<version>${imgscalr.lib.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<release>${java.version}</release>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
+				<version>${maven.jar.plugin.version}</version>
 				<configuration>
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>io.mosip.biometrics.util.test.BioUtilApplication.class</mainClass>
+							<mainClass>
+								io.mosip.biometrics.util.test.BioUtilApplication.class</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -125,7 +173,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.2</version>
+				<version>${maven.dependency.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>copy</id>
@@ -146,7 +194,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>${maven.resources.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>copy-resources-1</id>
@@ -181,31 +229,40 @@
 										<!-- what -->
 										<include>application.properties</include>
 										<include>run.sh</include>
-										<include>run_convert_face_JP2000_JPEG.bat</include>
+										<include>
+											run_convert_face_JP2000_JPEG.bat</include>
 										<include>run_convert_face_JP2000_PNG.bat</include>
-										<include>run_convert_iris_JP2000_JPEG.bat</include>
+										<include>
+											run_convert_iris_JP2000_JPEG.bat</include>
 										<include>run_convert_iris_JP2000_PNG.bat</include>
-										<include>run_convert_finger_JP2000_JPEG.bat</include>
-										<include>run_convert_finger_JP2000_PNG.bat</include>
+										<include>
+											run_convert_finger_JP2000_JPEG.bat</include>
+										<include>
+											run_convert_finger_JP2000_PNG.bat</include>
 										<include>run_convert_finger_WSQ_JPEG.bat</include>
 										<include>run_convert_finger_WSQ_PNG.bat</include>
 										<include>run_encoder_face_auth.bat</include>
-										<include>run_encoder_face_registration.bat</include>
+										<include>
+											run_encoder_face_registration.bat</include>
 										<include>run_decoder_face.bat</include>
 										<include>run_encoder_iris_auth.bat</include>
-										<include>run_encoder_iris_registration.bat</include>
+										<include>
+											run_encoder_iris_registration.bat</include>
 										<include>run_decoder_iris.bat</include>
-										<include>run_encoder_finger_jp2000_registration.bat</include>
-										<include>run_encoder_finger_jp2000_auth.bat</include>
+										<include>
+											run_encoder_finger_jp2000_registration.bat</include>
+										<include>
+											run_encoder_finger_jp2000_auth.bat</include>
 										<include>run_encoder_finger_wsq_auth.bat</include>
 										<include>run_decoder_finger_jp2000.bat</include>
 										<include>run_decoder_finger_wsq.bat</include>
 										<include>run_decoder_jp2000.bat</include>
 										<include>run_bio_auth_decoder.bat</include>
-										
+
 										<include>run_nist_file_reader.bat</include>
-										<include>run_nist_data_quality_analyser.bat</include>
-										
+										<include>
+											run_nist_data_quality_analyser.bat</include>
+
 									</includes>
 								</resource>
 							</resources>
